# blob-eater

./: .gitignore  .readme.md  Cargo.toml  README.md
src/: characters.rs  main.rs  npcs.rs  player.rs  ui.rs
