[package]
name = "blob-eater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
# bevy = { version = "0.12", default-features = false }
bevy_rapier2d = "0.23.0"
rand = "0.8.5"
# bevy_rapier2d = "0.23.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[profile.release]
strip = true  # Automatically strip symbols from the binary.\
# opt-level = "z"  # Optimize for size.
# opt-level = "s"  # Could be smaller
lto = true
codegen-units = 1 # size vs optimization tradeoff?
panic = "abort" # aborts instead of producing backtrace
